2002-08-02  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* cdl/hal_arm.cdl: Redboot exec command can now be disabled by CDL
	
2002-07-15  Mark Salter  <msalter@redhat.com>

	* include/arm_stub.h: Comment out NUMREGBYTES.

2002-05-28  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm.cdl: Tweaked description for
	CYGHWR_REDBOOT_ARM_LINUX_EXEC_ADDRESS.
	Add CYGHWR_REDBOOT_ARM_LINUX_TAGS_ADDRESS.

	* src/redboot_linux_exec.c (do_exec): Rework transition to MMU
	off and jump to kernel so that it works for non 1-1 mapped
	platforms.

2002-05-20  Gary Thomas  <gthomas@redhat.com>

	* include/hal_io.h: Fix ...STRING macros - not using index.
	Pointed out by Thomas Koeller <thomas@koeller.dyndns.org>.

2002-05-09  Nick Garnett  <nickg@redhat.com>

	* src/vectors.S (handle_IRQ_or_FIQ): Save SVC mode LR in interrupt
	handling as well as exceptions.

	* src/context.S (hal_thread_switch_context): Use correct size
	for skipping new HAL_SavedRegisters fields.
	
2002-05-08  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/hal_arm.cdl: Remove -malignment-traps here - add it only from
	packages when needed.

2002-05-08  Nick Garnett  <nickg@redhat.com>

	* src/vectors.S: Added code to save and restore value of SVC mode
	LR during exception processing. If the exception comes from a
	non-SVC mode then handling it originally corrupted the SVC mode
	LR. If the program subsequent returned to SVC mode it was likely
	to have problems. The registers for modes other than SVC and the
	exception mode are not touched, so we do not have to save/restore
	those.

	* src/hal_mk_defs.c: Added definitions for armreg_r10 and
	armreg_svclr.

	* include/hal_arch.h: Added svc_lr field to HAL_SavedRegisters to
	save SVC mode link register during exception handling.

2002-04-30  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_arm.cdl: Forcibly add -malignment-traps to the compiler
	options to work around problem with recent compiler. This can be
	removed when the tools are respun.
