@@ -1,3 +1,9 @@
+2002-08-21  Mark Salter  <msalter@redhat.com>
+
+	* src/arm_stub.c: Add support for large registers (e.g. FPU).
+	* include/arm_stub.h: Add infrastructure for support of coprocessors.
+	* include/hal_arch.h: Ditto.
+
 2002-08-02  Andrew Lunn <Andrew.Lunn@ascom.ch>
 
 	* cdl/hal_arm.cdl: Redboot exec command can now be disabled by CDL
